--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<a [routerLink]="['/']" routerLinkActive="router-link-active">NGRX/ {{ (config$ | async)?.adminName }}</a>
-<a [routerLink]="['/beers']" routerLinkActive="router-link-active"> Beers</a>
+<div class="container">
+  <nav class="nav">
+    <div class="nav-left">
+      <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a>
+    </div>
+    <div class="nav-center">
+      <a class="">NGRX-EXAMPLE</a>
+    </div>
+    <div class="nav-right">
+      <a [routerLink]="['/users']" routerLinkActive="active">{{ (config$ | async)?.adminName }}</a>
+    </div>
+  </nav>
+</div>
 <router-outlet></router-outlet>
