--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <nav class="nav">
     <div class="nav-left">
       <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a>
+      <a [routerLink]="['/cartoon']" routerLinkActive="active"> Cartoon</a>
     </div>
     <div class="nav-center">
       <a class="">NGRX-EXAMPLE</a>
