--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,13 @@
-<div class="container">
-  <nav class="nav">
-    <div class="nav-left">
-      <a class="">NGRX-EXAMPLE</a>
-    </div>
-    <div class="nav-right">
-      <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a>
-      <a [routerLink]="['/characters']" routerLinkActive="active"> Characters</a>
-      <a [routerLink]="['/episodes']" routerLinkActive="active"> Episodes</a>
-      <a [routerLink]="['/users']" routerLinkActive="active">{{ (config$ | async)?.adminName }}</a>
-    </div>
-  </nav>
-</div>
+<nav class="nav">
+  <div class="nav-left">
+    <a class="" href="#">NGRX-EXAMPLE</a>
+    <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a>
+    <a [routerLink]="['/characters']" routerLinkActive="active"> Characters</a>
+    <a [routerLink]="['/episodes']" routerLinkActive="active"> Episodes</a>
+  </div>
+  <div class="nav-right">
+    <a [routerLink]="['/users']" routerLinkActive="active">{{ (config$ | async)?.adminName }}</a>
+  </div>
+</nav>
+<br>
 <router-outlet></router-outlet>
