--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="nav-left">
     <a class="" href="#">NGRX-EXAMPLE</a>
-    <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a>
+    <!-- <a [routerLink]="['/beers']" routerLinkActive="active"> Beers</a> -->
     <a [routerLink]="['/characters']" routerLinkActive="active"> Characters</a>
     <a [routerLink]="['/episodes']" routerLinkActive="active"> Episodes</a>
   </div>
