general css updated

--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -18,7 +18,7 @@
       <input [(ngModel)]="user.password" name="password" type="password" required class="form-control" id="password"
         placeholder="enter a password">
     </div>
-    <button type="submit" class="button primary is-full-width">Sign-in</button>
+    <button type="submit" class="button dark is-full-width">Sign-in</button>
     <br>
-    <p>Don't have an <a [routerLink]="['/signup']">account</a> yet?</p>
+    <p class="is-text-center"><small>Don't have an <a [routerLink]="['/signup']">account</a> yet?</small></p>
   </form>
