--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -25,5 +25,5 @@
     </div>
     <button type="submit" class="button dark is-full-width">Sign-up</button>
     <br>
-    <p>Already have an <a [routerLink]="['/signin']">account</a>.</p>
+    <p class="is-text-center"><small>Already have an <a [routerLink]="['/signin']">account</a>.</small></p>
   </form>
