--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!(auth$ | async)?.isAuthenticated; then doSomething; else doSomethingElse;"></div>
   <ng-template #doSomething>
     <div class="nav-left">
-      <a class="" href="#">NGRX-EXAMPLE</a>
+      <a routerLink="/home">NGRX-EXAMPLE</a>
     </div>
     <div class="nav-right">
       <a [routerLink]="['/signin']" routerLinkActive="active"> Signin</a>
@@ -16,7 +16,7 @@
       <a [routerLink]="['/episodes']" routerLinkActive="active"> Episodes</a>
     </div>
     <div class="nav-right">
-      <a [routerLink]="['/users']" routerLinkActive="active">{{ (auth$ | async)?.user?.email }}</a>
+      <a [routerLink]="['/profile']" routerLinkActive="active">{{ (auth$ | async)?.user?.email }}</a>
       <a routerLink="" (click)="logout()">Logout</a>
     </div>
   </ng-template>
